--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "puleeno/opencart-engine",
+    "name": "puleeno/engine",
     "description": "Improve OpenCart core with Puleeno Engine. Fast, secure, optimization and flexible framework.",
     "type": "library",
     "license": "MIT",
@@ -9,5 +9,12 @@
             "email": "puleeno@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "intervention/image": "^2.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Puleeno\\": "src/"
+        }
+    }
 }
